--- a/src/App.css
+++ b/src/App.css
@@ -62,25 +62,16 @@ text-align: center;
   width: 220px;
   
 }
-.circle{
+
+.inner-circle{
   border: 5px solid rgb(48, 13, 247);
   border-radius: 50%;
   width: 350px;
   height: 350px;
-  position: absolute;
-  top:12px;
-  right:2px;
-  
-  
-  
-}
-.inner-circle{
-  width: 350px;
-  height: 350px;
-
-  position: absolute;
-  right: 2px;
-  top:42px;
+ position: absolute;
+  top:50%;
+  left: 50%;
+  margin: -170px 0px 0px -160px;
   
   
 }
