--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
 body{
   background-image: url('./assets/bg.png');
   opacity: 1;
+  
 
 }
 .navbar{
@@ -71,7 +72,7 @@ text-align: center;
  position: absolute;
   top:50%;
   left: 50%;
-  margin: -170px 0px 0px -160px;
+  margin: -170px 0px 0px -130px;
   
   
 }
@@ -86,4 +87,60 @@ text-align: center;
 }
 .footer img{
   margin-right: 20px;
+}
+@media (max-width:568px){
+  .inner-circle{
+    border: 5px solid rgb(48, 13, 247);
+    border-radius: 50%;
+    width: 350px;
+    height: 350px;
+   position: absolute;
+    top:50%;
+    left: 50%;
+    margin: -170px 0px 0px -100px;
+    
+    
+  }
+}
+@media (max-width:823px){
+  .inner-circle{
+    border: 5px solid rgb(48, 13, 247);
+    border-radius: 50%;
+    width: 350px;
+    height: 350px;
+   position: absolute;
+    top:50%;
+    left: 50%;
+    margin: -170px 0px 0px -130px;
+    
+    
+  }
+}
+@media (min-width:823px){
+  .inner-circle{
+    border: 5px solid rgb(48, 13, 247);
+    border-radius: 50%;
+    width: 350px;
+    height: 350px;
+   position: absolute;
+    top:50%;
+    left: 50%;
+    margin: -170px 0px 0px -70px;
+    
+    
+  }
+}
+@media (min-width:1024px){
+  .inner-circle{
+    border: 5px solid rgb(48, 13, 247);
+    border-radius: 50%;
+    width: 350px;
+    height: 350px;
+   position: absolute;
+    top:50%;
+    left: 50%;
+    margin: -170px 0px 0px -130px;
+    
+    
+  }
 }
